--- a/src/cJSON/CMakeLists.txt
+++ b/src/cJSON/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.9.1)
-project(cjson)
+project(libcjson)
 set(LIBRARY_OUTPUT_PATH  ${CMAKE_BINARY_DIR}/lib)
 file(GLOB SOURCES "*.c")
 add_library(cjson STATIC ${SOURCES})
